<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/selectIntersectionText"
        android:layout_width="449dp"
        android:layout_height="72dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="16dp"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        tools:text="@string/select_intersection_id" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".17" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="1" />

    <EditText
        android:id="@+id/start_road_id_entered"
        android:layout_width="66dp"
        android:layout_height="77dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/hint_00"
        android:inputType="number"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="@+id/selectIntersectionText"
        app:layout_constraintStart_toEndOf="@+id/selectIntersectionText"
        app:layout_constraintTop_toTopOf="@+id/selectIntersectionText"
        app:layout_constraintVertical_bias="0.0"/>

    <EditText
        android:id="@+id/end_road_id_entered"
        android:layout_width="66dp"
        android:layout_height="77dp"
        android:layout_marginStart="84dp"
        android:ems="10"
        android:hint="@string/hint_00"
        android:inputType="number"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="@+id/selectIntersectionText"
        app:layout_constraintStart_toEndOf="@+id/selectIntersectionText"
        app:layout_constraintTop_toTopOf="@+id/selectIntersectionText"
        app:layout_constraintVertical_bias="0.0"/>

    <Button
        android:id="@+id/button_singleIntersectionMenuOk"
        android:layout_width="187dp"
        android:layout_height="79dp"
        android:layout_marginStart="92dp"
        android:layout_marginEnd="4dp"
        android:text="@string/confirm"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="@+id/start_road_id_entered"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/start_road_id_entered"
        app:layout_constraintTop_toTopOf="@+id/start_road_id_entered"
        app:layout_constraintVertical_bias="0.0" />
</android.support.constraint.ConstraintLayout>